# progamming

./: .gitignore
CTCI-Practice/: CMakeLists.txt
CTCI-Practice/ArraysAndStrings/: CMakeCache.txt  CMakeLists.txt  CheckIfPermutationsOrNot.c  CheckIfStringHasDuplicateCharacters.c  ReplaceSpacesWith3Chars.c  ReverseTheString.c  cmake_install.cmake
CTCI-Practice/BitManipulation/: CMakeCache.txt  CMakeLists.txt  NextLowerAndNextHighweWithSameNumOf1s.c  NumOfBitsToFlip.c  SwapBitsAtEvenOddPositions.c  cmake_install.cmake
CTCI-Practice/LinkedLists/: CMakeCache.txt  CMakeLists.txt  CheckIfPalindromeOrNot.cpp  RemoveNodeGivenPointerToIt.c  RemovingDuplicatesInUnsortedLL.c  ReturnKthElementFromLast.c  cmake_install.cmake  stlHeader.h  test.cpp
CTCI-Practice/Moderate/: CMakeCache.txt  CMakeLists.txt  FindNumberOfTrailingZeroes.c  GameOfMasterMind.c  IntegerToEnglishPhrase.c  LargestSumContiguousSubarray.c  MaxElemMinElemWithoutComparison.c  ReturnMinMaxIndices.c  SwapTwoNumbersUsingXOR.c  TicTacToe.c  cmake_install.cmake
CTCI-Practice/Recursion/: CMakeLists.txt  FibonacciSeriesDP.c  FloodFillGame.c  MagicIndexInArray.c  NumOfRobotSteps.cc  ParenthesisCombinations.c  Staircase.cc  fib.c
CTCI-Practice/StacksAndQueues/: CMakeCache.txt  CMakeLists.txt  DescendingOrderInStacks.cpp  KStacksUsingArray.cpp  TowersOfHanoi.c  cmake_install.cmake
CTCI-Practice/Trees/: CMakeCache.txt  CMakeLists.txt  InOrderSuccessorWithParentPointers  InOrderSuccessorWithParentPointers.c  cmake_install.cmake
GFG/Arrays/: MaximumLengthBitonicSebarray.cpp
GFG/Misc/: FloorAndCeilingOfBST.c
GFG/Strings/: AnagramSubStringPermutationsSearch.cpp  CMakeLists.txt  CheckIfFirstStringIsSubStringOfSecond.cpp  CheckIfFirstStringIsSubsequenceOfSecond.cpp  CheckIfSequenceOfMovesAreCircular.cpp  CheckIfStringsAreInterleavings.c  CountNumOfWords.c  CountPossibleDecodingSequences.c  FindAllInterleavingsOfString.c  FindExcelColName.c  FindFirstNonRepeatingInStream.cpp  FindIfStringsCanBeChained.cpp  FindLongestSubstringWithKUniqueChars.cpp  LongestSubStringWithoutRepeatingCharacters.cpp  MaxDepthOfNestedParanthesis.cpp  NumOfCustomersWithoutComputers.cpp  PermutationsWithRepetitionChars.c  PossibleStringsByMakingSpaces.c  PrintAllAnagramsTogether.cpp  RecursivelyPrintAllSentences.cpp  RemoveSpacesFromString.c  Remove_a_bc_FromString.c  RobinKarpAlgorithm.c  RunLengthEncoding.cpp  StringMatchingWithWildCard.c
GeekCopy-Practice/BitManipulation/: s
GeekCopy-Practice/Graphs/: BFSUsingAdjacencyMatrix.cpp  CMakeLists.txt  DFSUsingAdjacencyList.c  DFSUsingAdjacencyMatrix.c  d
GeekCopy-Practice/PriQueues/: 19.c  20.c  26.c  CMakeLists.txt  ImplementQueueUsingAHeap.c  maxHeap.c  maxHeapminHeap.c
GeekCopy-Practice/Searching/: CMakeCache.txt  CMakeLists.txt  CountNuOfOccurances  CountNumberOfOccurencesInSortedArray.c  FindDuplicates  FindSumThreeElements  FindSumTwoElements  FindTwoElementsWithGivenSum.cpp  IncAndDec  IncreasingFollowedByDecreasingSequence.c  MaxRepeatingElement  PythagoreanTriplet.cpp  PythogoranTriplet  RowWiseColumnWiseIncreasing  RowWiseColumnWiseIncreasing.c  Segregate0s1s2s  Segregate0s1s2s.cpp  SegregateEvenAndOdd  SumOfThreeElements  SumOfThreeElementsEqualsK.cpp  ThreeElementsWhoseSumIsClosestToZero.cpp  TwoElemSumClosestToZero  cmake_install.cmake  t  test.c
GeekCopy-Practice/Stacks:Queues/: CMakeLists.txt  InfixToPrefix.c  NextGreaterElem.c  PostfixToInfix.c  PostfixToPrefix.c  QueueUsingStacks.c  StackUsingQueues.c  StockSpan.c  infixToPostfix.c  infixToPrefix.c  nextGreaterElem.c  postfixToInfix.c  postfixToPrefix.c  queueUsingStacks.c  stackReverseRecursive.c  stackUsingQueues.c  stockSpan.c
GeekCopy-Practice/Trees/: 31.c  34.c  BTToDLL.c  SearchInBT.c  TreeReconstruction.c
GeekCopy-Practice/Tries/: TSTOperations.c
General/: BSTOperations.cpp  CMakeLists.txt  DoubleLLOperations.c  FloodFillVariation_GeeksForGeeksArraysPage2.c  JosephCircle.cpp  MaxSumPairInUnsortedArr.c  MemoryDescriptorList.cpp  MergeSort.c  MinNumPossibleAfterRemovingAFewChars.c  MoreLLOperations.c  PostfixEvaluation.cpp  QueueOperations.c  RearrangeArray.c  RecursiveLLOperations.c  StringPermutations.c  TreesOperations.c  chainHashing.c  commonPointLL.c  queueOperations.c  searchingOperations.c  singleLLOperations.c  sortingTechniques.c  stackOperations.c  stackUsingLL.c  stringCombination.c  tokenScanner.c
Karumanchi-Programming/BitManipulation/: SetPatternBetweenTwoPositions.c
Karumanchi-Programming/Searching/: CMakeCache.txt  FindDuplicatesInArray.cpp  IncreasingFollowedByDecreasingSequence.c  MaxRepeatingElementInArray.cpp  SegreagteEvenAndOdd.cpp  TwoElementsWhoseSumIsClosestToZero.cpp  cmake_install.cmake  stlHeader.h
Karumanchi-Programming/Trees/: 11.c  18.c  20.c  21.c  22.c  24.c  29.c  8.c  9.c  BinaryTreeStructure.c  DLLToBT.c  InsertIntoBT.c  MaxElemInBT.c  NumOfLeafFullNodes.c  SizeOfBT.c  TreeSerializeDesiralize.c  TreeTraversals.c
Karumanchi-Programming/Tries/: TrieOperations.c
LTC/Arrays/: 3Sum  3SumClosest  BestTimeToBuyAndSellStock.c  Candy.cpp  CombinationSum.cpp  CombinationSumIII.cpp  CombinationsSumII  ContainsDuplicate  FindMinInSortedArray  FindMinInSortedArrayII  FirstMissingPositive.cpp  FourSum.cpp  InsertIntervals  MajorityElement  MajorityElementII.cpp  MaxSubArray.c  MergeIntervals  MergeSortedArray  MinSizeSubArray.cpp  MinimumPathSum.cpp  NextPermutation.cpp  NumOfIslands  PascalsTriangle  PascalsTriangleII  PeakElement  RemoveDiplicatesFromSortedArray  RemoveDuplicatesInSortedArray.cpp  RemoveElement  RotateArray  RotateArray.cpp  RotateImage  RotateImage.c  SearchA2DMatrix  SearchInRotatedArray  SearchInRotatedArrayII  SearchInsertPosition  SetMatrixZeroes  (+10 more)
OODesign/: BuildingDesign  BuildingDesign.cpp  CMakeLists.txt  SingleTonClassPattern  SingleTonClassPattern.cpp
PIE-Practice/: CMakeCache.txt  CMakeLists.txt  CombinationsOfString.c  ConvertFromIntToString.c  ConvertFromStringToInt.c  FirstNonRepeatingCharInWord.cpp  ImplementStackUsingLL.c  PermutationsOfString.c  RemoveSpecifiedCharacters.cpp  ReverseWords.c  TelephoneKeyPad.c  cmake_install.cmake  t  test.c
(+95 files in other folders)
