cmake_minimum_required(VERSION 2.8.3)
project(Searching C CXX)
add_definitions(-g -DDEBUG)
add_executable(MaxRepeatingElement MaxRepeatingElementInArray.cpp)
add_executable(TwoElemSumClosestToZero TwoElementsWhoseSumIsClosestToZero.cpp)
add_executable( PythogoranTriplet PythagoreanTriplet.cpp)
add_executable(SumOfThreeElements SumOfThreeElementsEqualsK.cpp)
add_executable(CountNuOfOccurances CountNumberOfOccurencesInSortedArray.c)
add_executable(FindDuplicates FindDuplicatesInArray.cpp)
add_executable(FindSumThreeElements ThreeElementsWhoseSumIsClosestToZero.cpp)
add_executable(FindSumTwoElements FindTwoElementsWithGivenSum.cpp)
add_executable(IncAndDec IncreasingFollowedByDecreasingSequence.c)
add_executable(RowWiseColumnWiseIncreasing RowWiseColumnWiseIncreasing.c)
add_executable(SegreagteEvenAndOdd SegreagteEvenAndOdd.cpp)
add_executable(Segreate0s1s2s Segreate0s1s2s.cpp)
#add_executable(postfix postfix.cpp)
