cmake_minimum_required(VERSION 2.8.3)
project(Searching C CXX)
add_definitions(-g -DDEBUG)
add_executable(TreesOperations TreesOperations.c)
add_executable(TokenScanner TokenScanner.c)
add_executable(StringPermutations StringPermutations.c)
add_executable(StringCombinations StringCombinations.c)
add_executable(StackUsingLL StackUsingLL.c)
add_executable(StackOperations StackOperations.c)
add_executable(SortingTechniques SortingTechniques.c)
add_executable(SingleLLOperaions SingleLLOperaions.c)
add_executable(SearchingOperations SearchingOperations.c)
add_executable(RecursiveLLOperations RecursiveLLOperations.c)
add_executable(QueueOperations QueueOperations.c)
add_executable(MoreLLOperations MoreLLOperations.c)
add_executable(MergeSort MergeSort.c)
add_executable(DoubleLLOperations DoubleLLOperations.c)
add_executable(CommonPointLL CommonPointLL.c)
add_executable(ChainHashing ChainHashing.c)
add_executable(MinNumPossibleAfterRemovingAFewChars MinNumPossibleAfterRemovingAFewChars.c)
add_executable(PostfixEvaluation PostfixEvaluation.cpp)
add_executable(JosephCircle JosephCircle.cpp)
