cmake_minimum_required(VERSION 2.8.3)
project(PIE C CXX)
add_definitions(-g -DDEBUG)
add_executable(ImplementStackUsingLL ImplementStackUsingLL.c)
add_executable(FirstNonRepeatingCharInWord FirstNonRepeatingCharInWord.cpp)
add_executable(RemoveSpecifiedCharacters RemoveSpecifiedCharacters.cpp)
add_executable(ReverseWords ReverseWords.c)
add_executable(ConvertFromStringToInt ConvertFromStringToInt.c)
add_executable(ConvertFromIntToString ConvertFromIntToString.c)
