cmake_minimum_required(VERSION 2.8.3)
project(ArraysAndStrings C CXX)
add_definitions(-g -DDEBUG)
add_executable(CheckIfStringHasDuplicateCharacters CheckIfStringHasDuplicateCharacters.c)
add_executable(ReverseTheString ReverseTheString.c)
add_executable(CheckIfPermutationsOrNot CheckIfPermutationsOrNot.c)
add_executable(ReplaceSpacesWith3Chars ReplaceSpacesWith3Chars.c)
