cmake_minimum_required(VERSION 2.8.3)
project(Searching C CXX)
add_definitions(-g -DDEBUG)
add_executable(SwapTwoNumbersUsingXOR SwapTwoNumbersUsingXOR.c)
add_executable(TicTacToe TicTacToe.c)
add_executable(FindNumberOfTrailingZeroes FindNumberOfTrailingZeroes.c)
add_executable(MaxElemMinElemWithoutComparison MaxElemMinElemWithoutComparison.c)
add_executable(GameOfMasterMind GameOfMasterMind.c)
add_executable(ReturnMinMaxIndices ReturnMinMaxIndices.c)	
add_executable(IntegerToEnglishPhrase IntegerToEnglishPhrase.c)
add_executable(LargestSumContiguousSubarray LargestSumContiguousSubarray.c)
