cmake_minimum_required(VERSION 2.8.3)
project(Searching C CXX)
add_definitions(-g -DDEBUG)
add_executable(RemoveSpacesFromString RemoveSpacesFromString.c)
add_executable(RobinKarpAlgorithm RobinKarpAlgorithm.c)
add_executable(RecursivelyPrintAllSentences RecursivelyPrintAllSentences.cpp)
add_executable(CheckIfSequenceOfMovesAreCircular CheckIfSequenceOfMovesAreCircular.cpp)
add_executable(FindLongestSubstringWithKUniqueChars FindLongestSubstringWithKUniqueChars.cpp)
add_executable(NumOfCustomersWithoutComputers NumOfCustomersWithoutComputers.cpp)
add_executable(MaxDepthOfNestedParanthesis MaxDepthOfNestedParanthesis.cpp)
add_executable(PossibleStringsByMakingSpaces PossibleStringsByMakingSpaces.c)
add_executable(CheckIfFirstStringIsSubStringOfSecond CheckIfFirstStringIsSubStringOfSecond.cpp)
add_executable(FindIfStringsCanBeChained FindIfStringsCanBeChained.cpp)
add_executable(AnagramSubStringPermutationsSearch AnagramSubStringPermutationsSearch.cpp)
add_executable(CountPossibleDecodingSequences CountPossibleDecodingSequences.c)
add_executable(FindFirstNonRepeatingInStream FindFirstNonRepeatingInStream.cpp)
add_executable(Remove_a_bc_FromString Remove_a_bc_FromString.c)
add_executable(CountNumOfWords CountNumOfWords.c)
add_executable(PrintAllAnagramsTogether PrintAllAnagramsTogether.cpp)
add_executable(FindAllInterleavingsOfString FindAllInterleavingsOfString.c)
add_executable(LongestSubStringWithoutRepeatingCharacters LongestSubStringWithoutRepeatingCharacters.cpp)
add_executable(StringMatchingWithWildCard StringMatchingWithWildCard.c)
add_executable(CheckIfStringsAreInterleavings CheckIfStringsAreInterleavings.c)
