cmake_minimum_required(VERSION 2.8.3)
project(Searching C CXX)
add_definitions(-g -DDEBUG)
add_executable(StockSpan StockSpan.c)
add_executable(StackUsingQueues StackUsingQueues.c)
add_executable(StackReverseRecursive StackReverseRecursive.c)
add_executable(QueueUsingStacks QueueUsingStacks.c)
add_executable(PostfixToPrefix PostfixToPrefix.c)
add_executable(PostfixToInfix PostfixToInfix.c)
add_executable(NextGreaterElem NextGreaterElem.c)
add_executable(InfixToPrefix InfixToPrefix.c)
